<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
                android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trim_Color"
                    android:padding="@dimen/review_Padding"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/background_Color" android:id="@+id/relativeLayout2">
        </RelativeLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonSubmitReview"
                android:textStyle="bold"
                android:background="@color/secondary_Color"
                android:id="@+id/submitReviewButton"
                android:layout_below="@+id/editReviewText" android:layout_alignParentLeft="true"
                android:onClick="submitReview" android:layout_alignRight="@+id/editReviewText"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editReviewText"
                android:hint="@string/editWriteAReview"
                android:layout_below="@+id/enterNameEditText" android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/reviewRatingSpinner"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editTextName"
                android:ems="10"
                android:id="@+id/enterNameEditText"
                android:layout_below="@+id/relativeLayout2" android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/reviewRatingSpinner"/>
        <Spinner
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/reviewRatingSpinner"
                android:entries="@array/rating_array"
                android:layout_alignParentTop="true" android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/enterNameEditText"/>
    </RelativeLayout>
</RelativeLayout>